# obs-virtual-cam

./: CMakeLists.txt
src/baseclasses/: CMakeLists.txt  baseclasses.sln  baseclasses.vcxproj  wxdebug.cpp
src/virtual-source/: CMakeLists.txt
